# nginx-ssl-auto

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
nginx_ssl_auto/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
